// Copyright 2019 Alexander Trost. All rights reserved.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
// http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = 'proto2';

package apiserver;
option go_package = "github.com/galexrt/edenconfmgmt/pkg/grpc/plugins/apiserver";

import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "google/protobuf/descriptor.proto";

option (gogoproto.gogoproto_import) = true;

extend google.protobuf.MessageOptions {
    optional MessageOptions options = 1337;
}

message MessageOptions {
    optional bool generate = 1;
    optional bool namespaced = 2;
    optional string coreAPIPkg = 3;
}
